2004-12-30  graydon hoare  <graydon@pobox.com>

	* Makefile.am: Clean full testsuite directory and full-version.
	* configure.ac: Bump version number.
	* po/monotone.pot: Regenerate.
	* NEWS: Describe new release.

2004-12-29  Julio M. Merino Vidal  <jmmv@menta.net>

	* tests/t_cmdline_options.at: New test for previous: ensure that
	monotone is actually checking for command line correctness.
	* testsuite.at: Add it.

2004-12-29  Julio M. Merino Vidal  <jmmv@menta.net>

	* monotone.cc: Verify that the command line is syntactically correct
	as regards to options (based on error codes from popt).

2004-12-29  Matt Johnston  <matt@ucc.asn.au>

        * tests/t_drop_rename_patch.at: A test to check that deltas on
        renamed files are included in concatenate_change_sets, if there was a
        deletion of a file with the same name as the rename src.
        * testsuite.at: add it

2004-12-29  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Add Jordi.
	* change_set.{cc,hh}: Make sanity helpers const.
	(normalize_change_set): Drop a->a deltas.
	(merge_change_sets): Call normalize.
	(invert_change_set): Likewise.
	* revision.cc 
	(find_subgraph_for_composite_search): New fn.
	(calculate_composite_change_set): Call it.
	(calculate_change_sets_recursive): Use results.
	* tests/t_no_change_deltas.at: Fix.

2004-12-29  graydon hoare  <graydon@pobox.com>

	* change_set.cc: Fix unit tests to satisfy sanity checks.
	* std_hooks.lua: Fix status checking on external merges.

2004-12-29  Matt Johnston  <matt@ucc.asn.au>

        * change_set.{cc,hh}: Take account of files which are the
        destination of a rename_file operation, when examining
        file deletions. Added helper methods to clean up related code.

2004-12-29  Matt Johnston  <matt@ucc.asn.au>

        * change_set.cc: added a sanity check for deltas with same src/dst,
        and deleted files with deltas.

2004-12-29  Matt Johnston  <matt@ucc.asn.au>
