@@ -321,3 +321,4 @@ m4_include(tests/t_dump_load.at)
 m4_include(tests/t_no_change_deltas.at)
 m4_include(tests/t_drop_rename_patch.at)
 m4_include(tests/t_cmdline_options.at)
+m4_include(tests/t_log_nonexistent.at)
